# proyecto_ing_datos

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-data-exploration-0.ipynb  0.02-data-exploration-0.ipynb  v1-0-initial_seek_clean.ipynb
proyecto_ciencia_de_datos/: __init__.py  dataset.py  features.py  plots.py
proyecto_ciencia_de_datos/data/: make_dataset.py  tidy_data.py
proyecto_ciencia_de_datos/modeling/: predict.py  train.py
references/catalogo_INEGI/: tc_dia.csv  tc_edad.csv  tc_entidad.csv  tc_hora.csv  tc_minuto.csv  tc_municipio.csv  tc_periodo_mes.csv
