[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_ciencia_de_datos"
version = "0.0.1"
description = "Analisis con datos sobre una problematica real"
authors = [
  { name = "Equipo MCD" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["proyecto_ciencia_de_datos"]
include = ["pyproject.toml", "proyecto_ciencia_de_datos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto_ciencia_de_datos"]
force-sort-within-sections = true

